[shenker/microscope_design] WIP prism optimization from a few months ago. Updated some optical catalog code, added kwarg for choosing microns or nanometers for wavelengths.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
@@ -91,15 +91,10 @@
     "    \"Chroma ET665lp\": \"573\",\n",
     "}\n",
     "\n",
-    "sources = {\n",
-    "    name: spectra.get_fpbase_spectrum(q, bins=bins) for name, q in sources.items()\n",
-    "}\n",
-    "dichroics = {\n",
-    "    name: spectra.get_fpbase_spectrum(q, bins=bins) for name, q in dichroics.items()\n",
-    "}\n",
+    "sources = {name: spectra.get_fpbase_spectrum(q, bins=bins) for name, q in sources.items()}\n",
+    "dichroics = {name: spectra.get_fpbase_spectrum(q, bins=bins) for name, q in dichroics.items()}\n",
     "longpass_filters = {\n",
-    "    name: spectra.get_fpbase_spectrum(q, bins=bins)\n",
-    "    for name, q in longpass_filters.items()\n",
+    "    name: spectra.get_fpbase_spectrum(q, bins=bins) for name, q in longpass_filters.items()\n",
     "}"
    ]
   },
@@ -118,10 +113,7 @@
     "    for id_ in (537, 538)  # RazorEdge ultrasharp (not available in 32mm standard): 545\n",
     "]\n",
     "\n",
-    "dichroics = {\n",
-    "    **dichroics,\n",
-    "    **spectra.get_semrock_spectra(semrock_dichroic_urls, bins=bins),\n",
-    "}\n",
+    "dichroics = {**dichroics, **spectra.get_semrock_spectra(semrock_dichroic_urls, bins=bins)}\n",
     "longpass_filters = {\n",
     "    **longpass_filters,\n",
     "    **spectra.get_semrock_spectra(semrock_longpass_urls, bins=bins),\n",
@@ -134,12 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dichroics = dict(\n",
-    "    sorted(dichroics.items(), key=lambda x: (x[1].loc[:700] < 0.5)[::-1].idxmax())\n",
-    ")\n",
-    "longpass_filters = dict(\n",
-    "    sorted(longpass_filters.items(), key=lambda x: (x[1].loc[:700] < 0.5).idxmax())\n",
-    ")"
+    "dichroics = dict(sorted(dichroics.items(), key=lambda x: (x[1].loc[:700] < 0.5)[::-1].idxmax()))\n",
+    "longpass_filters = dict(sorted(longpass_filters.items(), key=lambda x: (x[1].loc[:700] < 0.5).idxmax()))"
    ]
   },
   {
@@ -240,7 +228,7 @@
     "    .sort_values(\"ex_cutoff\")\n",
     "    .index.values\n",
     ")\n",
-    "# selected_filter_combinations = acceptable_filter_combinations.index"
+    "#selected_filter_combinations = acceptable_filter_combinations.index"
    ]
   },
   {
@@ -342,10 +330,11 @@
    "outputs": [],
    "source": [
     "def spectra_viewer(fp_names=None, dc_names=None, lp_names=None):\n",
-    "    viewer = spectra.SpectraViewer(\n",
-    "        fps, dichroics, longpass_filters, fp_names, dc_names, lp_names\n",
-    "    )\n",
-    "    return pn.Row(pn.Column(\"## Spectra\", viewer.param), viewer.view)"
+    "    viewer = spectra.SpectraViewer(fps, dichroics, longpass_filters, fp_names, dc_names, lp_names)\n",
+    "    return pn.Row(\n",
+    "        pn.Column(\"## Spectra\", viewer.param),\n",
+    "            viewer.view\n",
+    "    )"
    ]
   },
   {
@@ -390,51 +379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter_plot(fp_names=selected_fps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_plot(fp_names=selected_fps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_plot(fp_names=selected_fps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_plot(fp_names=selected_fps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\", \".join(fps.keys())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
