--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Glass.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Glass.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "%%time\n",
     "catalog = opticalmaterials.parse_rii_catalog(\n",
-    "    \"compoundprisms/rii-database-2020-01-19.zip\"\n",
+    "    \"compoundprisms/rii-database-2021-07-18.zip\"\n",
     ")\n",
     "with open(\"compoundprisms/rii.pickle\", \"wb\") as f:\n",
     "    pickle.dump(catalog, f)"
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = glasses[\"N-SF11\"][\"DATA\"][\"tabulated k\"][\"data\"]"
+    "df = catalog[\"N-SF11\"][\"DATA\"][\"tabulated k\"][\"data\"]"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "glasses[\"N-SF11\"][\"DATA\"][\"tabulated k\"][\"data\"].hvplot()"
+    "catalog[\"N-SF11\"][\"DATA\"][\"tabulated k\"][\"data\"].hvplot()"
    ]
   },
   {
@@ -167,16 +167,16 @@
     "\n",
     "thickness = 2e3  # in µm\n",
     "\n",
-    "for glass_name, glass in glasses.items():\n",
-    "    if \"ht\" not in glass_name.lower():\n",
+    "for glass_name, glass in catalog.items():\n",
+    "    if not glass_name[1].endswith(\"HT\"):\n",
     "        continue\n",
     "    if \"tabulated k\" not in glass[\"DATA\"]:\n",
     "        continue\n",
     "    df = glass[\"DATA\"][\"tabulated k\"][\"data\"]\n",
     "    #     if df.index[0] > .28 or df.iloc[0,0] > 5e-6:\n",
     "    #         continue\n",
-    "    T = transmittance(df.index, df[\"kappa\"], thickness)\n",
-    "    tooltips = [(\"Name\", glass_name), (\"x\", \"@x\"), (\"y\", \"@y\")]\n",
+    "    T = opticalmaterials.transmittance(df.index.values, df[\"k\"].values, thickness)\n",
+    "    tooltips = [(\"Name\", \"/\".join(glass_name)), (\"x\", \"@x\"), (\"y\", \"@y\")]\n",
     "    hover = HoverTool(tooltips=tooltips)\n",
     "    curves.append(hv.Curve((df.index, T), label=glass_name).opts(tools=[hover]))\n",
     "\n",
@@ -252,11 +252,11 @@
     "def _uv_transmittance(glass):\n",
     "    thickness = 5e3  # µm\n",
     "    lmbda = 0.3  # µm\n",
-    "    kappa = glass[\"DATA\"][\"tabulated k\"][\"data\"]\n",
-    "    if kappa.index[0] > lmbda or not len(kappa):\n",
+    "    k = glass[\"DATA\"][\"tabulated k\"][\"data\"]\n",
+    "    if k.index[0] > lmbda or not len(k):\n",
     "        return 0\n",
-    "    T = transmittance(kappa.index, kappa[\"kappa\"], thickness)\n",
-    "    idx = T.index.get_loc(lmbda, method=\"nearest\", tolerance=0.1)\n",
+    "    T = pd.Series(opticalmaterials.transmittance(k.index.values, k[\"k\"].values, thickness), index=k.index)\n",
+    "    idx = k.index.get_indexer([lmbda], method=\"nearest\", tolerance=0.1)[0]\n",
     "    return T.iloc[idx]\n",
     "\n",
     "\n",
@@ -264,14 +264,14 @@
     "    list(\n",
     "        [\n",
     "            (\n",
-    "                name,\n",
+    "                \"/\".join(name),\n",
     "                g[\"SPECS\"][\"Vd\"],\n",
     "                g[\"SPECS\"][\"nd\"],\n",
     "                # g[\"DATA\"][\"tabulated k\"][\"data\"].index[0],\n",
     "                (g[\"DATA\"][\"tabulated k\"][\"data\"] < 5e-7).idxmax()[0],\n",
     "                _uv_transmittance(g),\n",
     "            )\n",
-    "            for name, g in glasses.items()\n",
+    "            for name, g in catalog.items()\n",
     "            if \"SPECS\" in g and \"Vd\" in g[\"SPECS\"] and \"tabulated k\" in g[\"DATA\"]\n",
     "        ]\n",
     "    ),\n",
@@ -343,15 +343,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abbe_data[abbe_data.index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "uv_glasses = [\n",
     "    \"hoya_MC-TAF31-15\",\n",
     "    \"hikari_J-LASF09A\",\n",
@@ -390,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
