--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
@@ -7,12 +7,26 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import jax.numpy as jnp\n",
     "import pandas as pd\n",
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pickle\n",
-    "from tqdm.auto import tqdm"
+    "import panel as pn\n",
+    "import param\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import opticalmaterials\n",
+    "import spectra\n",
+    "import util"
    ]
   },
   {
@@ -25,22 +39,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spectral response"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import opticalmaterials\n",
-    "import prisms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load glass catalog"
+    "bins = np.arange(300, 1000).astype(float)"
    ]
   },
   {
@@ -55,10 +66,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Singlet"
+    "def delta(n, gamma=np.deg2rad(30), theta0=0, beta=0):\n",
+    "    alpha = gamma - beta\n",
+    "    # for theta0=0, beta=0, simplifies to:\n",
+    "    # jnp.arcsin(n(lmbda)*jnp.sin(gamma)) - gamma\n",
+    "    return (\n",
+    "        theta0\n",
+    "        - gamma\n",
+    "        - jnp.arcsin(\n",
+    "            n * jnp.sin(jnp.arcsin(jnp.sin(theta0 - beta) / n) - alpha)\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
@@ -67,10 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deltaT_target = np.deg2rad(1)\n",
-    "w = np.linspace(0.4, 0.7, 20)\n",
-    "n1_func = opticalmaterials.get_n(catalog[(\"SCHOTT-LaK\", \"N-LAK33A\")])\n",
-    "n1 = n1_func(w)"
+    "n, dn = opticalmaterials.get_n(catalog[(\"BK7\", \"SCHOTT\")], nanometers=True)"
    ]
   },
   {
@@ -79,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prisms.optimize_singlet(w, n1, deltaT_target)"
+    "# Dora calculated alpha angles using 400-800nm wavelength range (11deg 21' -> 0.2372deg angle diff)"
    ]
   },
   {
@@ -88,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[c for c in catalog.keys() if \"SCHOTT\" in c[0]]"
+    "# desired range: 550nm to 665nm"
    ]
   },
   {
@@ -97,19 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deltaT_target = np.deg2rad(4)\n",
-    "w = np.linspace(0.4, 0.7, 20)\n",
-    "rows = []\n",
-    "for glass_name, glass in catalog.items():\n",
-    "    if \"SCHOTT\" not in glass_name[0]:\n",
-    "        continue\n",
-    "    try:\n",
-    "        n1_func = opticalmaterials.get_n(glass)\n",
-    "        n1 = n1_func(w)\n",
-    "        row = prisms.optimize_singlet(w, n1, deltaT_target)\n",
-    "    except:\n",
-    "        continue\n",
-    "    rows.append((*glass_name, *row))"
+    "gamma = np.deg2rad(11 + 21 / 60)\n",
+    "np.rad2deg(delta(n(400), gamma=gamma) - delta(n(800), gamma=gamma))"
    ]
   },
   {
@@ -118,25 +127,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "singlet_df = pd.DataFrame.from_records(\n",
-    "    rows,\n",
-    "    columns=(\n",
-    "        \"glass1\",\n",
-    "        \"glass2\",\n",
-    "        \"beta\",\n",
-    "        \"gamma\",\n",
-    "        \"alpha\",\n",
-    "        \"deltaC\",\n",
-    "        \"deltaM\",\n",
-    "        \"delta1\",\n",
-    "        \"deltaT\",\n",
-    "        \"nonlin\",\n",
-    "        \"NL\",\n",
-    "        \"SSR\",\n",
-    "    ),\n",
-    ")\n",
-    "for col in [\"beta\", \"gamma\", \"alpha\", \"deltaC\", \"deltaT\", \"deltaM\", \"delta1\"]:\n",
-    "    singlet_df.loc[:, col] *= 180 / np.pi"
+    "gamma = np.deg2rad(11 + 21 / 60)\n",
+    "gamma = np.deg2rad(18 + 9 / 60)\n",
+    "np.rad2deg(delta(n(550), gamma=gamma) - delta(n(665), gamma=gamma))"
    ]
   },
   {
@@ -145,14 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "singlet_df.sort_values(\"SSR\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Doublet/Double-Amici"
+    "hv.Curve((bins, np.rad2deg(delta(n(bins), gamma=np.deg2rad(8)))))"
    ]
   },
   {
@@ -161,29 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "glasses = [\n",
-    "    \"N-PK51\",\n",
-    "    \"N-BK10\",\n",
-    "    \"N-BAF4\",\n",
-    "    \"N-KZFS11\",\n",
-    "    \"N-BAF52\",\n",
-    "    \"N-KZFS4\",\n",
-    "    \"N-LAK33A\",\n",
-    "    \"N-BALF5\",\n",
-    "    \"N-LASF31A\",\n",
-    "    \"N-BAF4\",\n",
-    "    \"LAFN7\",\n",
-    "    \"N-BASF2\",\n",
-    "    \"N-LASF44\",\n",
-    "    \"N-BAF10\",\n",
-    "    \"N-LAF34\",\n",
-    "    \"N-SSK5\",\n",
-    "    \"N-SF66\",\n",
-    "    \"N-LAK14\",\n",
-    "]\n",
-    "\n",
-    "glasses_long = [[gg for gg in catalog.keys() if gg[1] == g][0] for g in glasses]\n",
-    "glasses_long = [g for g in catalog.keys() if \"SCHOTT\" in g[0]]  # [::10]"
+    "hv.Curve((bins, n(bins)))"
    ]
   },
   {
@@ -192,32 +156,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "deltaT_target = np.deg2rad(6)\n",
-    "system = \"doublet\"\n",
-    "# system = \"double-amici\"\n",
-    "merit = \"dev_linearity_thickness\"  # \"dev_linearityK\"\n",
-    "w = np.linspace(0.4, 0.7, 20)\n",
-    "rows = []\n",
-    "for glass_name1 in tqdm(glasses_long):\n",
-    "    try:\n",
-    "        n1_func = opticalmaterials.get_n(catalog[glass_name1])\n",
-    "        n1 = n1_func(w)\n",
-    "    except:\n",
-    "        continue\n",
-    "    for glass_name2 in glasses_long:\n",
-    "        #         n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
-    "        #         n2 = n2_func(w)\n",
-    "        #         row = prisms.optimize_doublet(w, n1, n2, deltaT_target, merit=merit, system=system)\n",
+    "hv.Curve((bins, dn(bins))) * hv.Curve((bins[:-1], np.diff(n(bins))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_prisms(glasses, wavelength_min=550, wavelength_max=665):\n",
+    "    d = {}\n",
+    "    for glass_name, glass in glasses.items():\n",
+    "        gamma = np.deg2rad(18 + 9 / 60)\n",
     "        try:\n",
-    "            n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
-    "            n2 = n2_func(w)\n",
-    "            row = prisms.optimize_doublet(\n",
-    "                w, n1, n2, deltaT_target, merit=merit, system=system\n",
+    "            n, _ = opticalmaterials.get_n(glass, nanometers=True)\n",
+    "            n_blue = n(wavelength_min)\n",
+    "            n_red = n(wavelength_max)\n",
+    "            angle = np.rad2deg(\n",
+    "                delta(n_blue, gamma=gamma)\n",
+    "                - delta(n_red, gamma=gamma)\n",
+    "            )\n",
+    "            d[glass_name] = (\n",
+    "                pd.Series(\n",
+    "                    {\n",
+    "                        \"n_blue\": n_blue,\n",
+    "                        \"n_red\": n_red,\n",
+    "                        \"n_diff\": n_blue - n_red,\n",
+    "                        \"angle\": angle,\n",
+    "                    }\n",
+    "                )\n",
+    "                .to_frame()\n",
+    "                .T\n",
     "            )\n",
     "        except:\n",
-    "            continue\n",
-    "        rows.append((*glass_name1, *glass_name2, *row))"
+    "            print(f\"skipping {glass_name}\")\n",
+    "    # for filter_combo in filter_combo_names:\n",
+    "    #     dc = dichroics[filter_combo[0]]\n",
+    "    #     lp = longpass_filters[filter_combo[1]]\n",
+    "    #     dd = {}\n",
+    "    #     for fp_name in fp_names:\n",
+    "    #         ex = fps[fp_name][\"spectra\"][\"ex\"]\n",
+    "    #         em = fps[fp_name][\"spectra\"][\"em\"]\n",
+    "    #         dd[fp_name] = (\n",
+    "    #             fp_efficiency(\n",
+    "    #                 dc,\n",
+    "    #                 lp,\n",
+    "    #                 ex,\n",
+    "    #                 em,\n",
+    "    #                 filter_combinations.loc[filter_combo][\"ex_cutoff\"],\n",
+    "    #                 filter_combinations.loc[filter_combo][\"em_cutoff\"],\n",
+    "    #             )\n",
+    "    #             .to_frame()\n",
+    "    #             .T\n",
+    "    #         )\n",
+    "    #     d[filter_combo] = (\n",
+    "    #         pd.concat(dd, axis=1)\n",
+    "    #         .reorder_levels([1, 2, 0], axis=1)\n",
+    "    #         .sort_index(axis=1, level=1, sort_remaining=False)\n",
+    "    #     )\n",
+    "    return pd.concat(d, axis=0).droplevel(-1)"
    ]
   },
   {
@@ -226,98 +224,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doublet_df = pd.DataFrame.from_records(\n",
-    "    rows,\n",
-    "    columns=(\n",
-    "        \"glass1_1\",\n",
-    "        \"glass1_2\",\n",
-    "        \"glass2_1\",\n",
-    "        \"glass2_2\",\n",
-    "        \"alpha1\",\n",
-    "        \"alpha2\",\n",
-    "        \"deltaC\",\n",
-    "        \"deltaT\",\n",
-    "        \"NL\",\n",
-    "        \"SSR\",\n",
-    "        \"deltaM\",\n",
-    "        \"K\",\n",
-    "        \"delta1\",\n",
-    "        \"delta2\",\n",
-    "        \"nonlin\",\n",
-    "        \"chromat\",\n",
-    "    ),\n",
-    ")\n",
-    "for col in [\"alpha1\", \"alpha2\", \"deltaC\", \"deltaT\", \"deltaM\", \"delta1\", \"delta2\"]:\n",
-    "    doublet_df.loc[:, col] *= 180 / np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doublet_df.sort_values(\"SSR\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doublet_df[[\"deltaT\", \"SSR\", \"K\"]].hvplot.scatter(\"deltaT\", \"SSR\", color=\"K\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w2 = np.linspace(0.35, 1, 100)\n",
-    "k1 = opticalmaterials.get_k(catalog[(\"SCHOTT-LaSF\", \"N-LASF44\")])\n",
-    "plt.plot(w2, opticalmaterials.transmittance(w2, k1(w2), 1e5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Triplet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "glasses = [\n",
-    "    \"CAF2\",\n",
-    "    \"LASF40\",\n",
-    "    \"SF67\",\n",
-    "    \"LASF31A\",\n",
-    "    \"PK52A\",\n",
-    "    \"FK51A\",\n",
-    "    \"BAF4\",\n",
-    "    \"LAF34\",\n",
-    "    \"LASF44\",\n",
-    "    \"SF8\",\n",
-    "    \"PK51\",\n",
-    "]\n",
-    "\n",
-    "# glasses_long = [[gg for gg in catalog.keys() if g in gg[1]][0] for g in glasses]\n",
-    "glasses_long = [g for g in catalog.keys() if \"SCHOTT\" in g[0]][::5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "glasses_long"
+    "catalog_subset = {\n",
+    "    k: v\n",
+    "    for k, v in catalog.items()\n",
+    "    if any(\n",
+    "        c in k[0] or c in k[1]\n",
+    "        for c in (\"SCHOTT\", \"CDGM\", \"HIKARI\", \"OHARA\", \"SUMITA\", \"HOYA\")\n",
+    "    )\n",
+    "}"
    ]
   },
   {
@@ -327,32 +241,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "deltaT_target = np.deg2rad(20)\n",
-    "system = \"triplet\"\n",
-    "system = \"janssen\"\n",
-    "merit = \"dev_linearityK\"\n",
-    "w = np.linspace(0.4, 0.7, 20)\n",
-    "rows = []\n",
-    "for glass_name1 in tqdm(glasses_long):\n",
-    "    try:\n",
-    "        n1_func = opticalmaterials.get_n(catalog[glass_name1])\n",
-    "        n1 = n1_func(w)\n",
-    "    except:\n",
-    "        continue\n",
-    "    for glass_name2 in tqdm(glasses_long, leave=False):\n",
-    "        n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
-    "        n2 = n2_func(w)\n",
-    "        for glass_name3 in glasses_long:\n",
-    "            n3_func = opticalmaterials.get_n(catalog[glass_name3])\n",
-    "            n3 = n3_func(w)\n",
-    "            # row = prisms.optimize_doublet(w, n1, n2, deltaT_target, n3=n3, merit=merit, system=system)\n",
-    "            try:\n",
-    "                row = prisms.optimize_doublet(\n",
-    "                    w, n1, n2, deltaT_target, n3=n3, merit=merit, system=system\n",
-    "                )\n",
-    "            except:\n",
-    "                continue\n",
-    "            rows.append((*glass_name1, *glass_name2, *glass_name3, *row))"
+    "p = evaluate_prisms(catalog_subset)"
    ]
   },
   {
@@ -361,33 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "triplet_df = pd.DataFrame.from_records(\n",
-    "    rows,\n",
-    "    columns=(\n",
-    "        \"glass1_1\",\n",
-    "        \"glass1_2\",\n",
-    "        \"glass2_1\",\n",
-    "        \"glass2_2\",\n",
-    "        \"glass3_1\",\n",
-    "        \"glass3_2\",\n",
-    "        \"alpha1\",\n",
-    "        \"alpha2\",\n",
-    "        \"deltaC\",\n",
-    "        \"deltaT\",\n",
-    "        \"NL\",\n",
-    "        \"SSR\",\n",
-    "        \"deltaM\",\n",
-    "        \"K\",\n",
-    "        \"delta1\",\n",
-    "        \"delta2\",\n",
-    "        \"nonlin\",\n",
-    "        \"chromat\",\n",
-    "    ),\n",
-    ")\n",
-    "for col in [\"alpha1\", \"alpha2\", \"deltaC\", \"deltaT\", \"deltaM\", \"delta1\", \"delta2\"]:\n",
-    "    triplet_df.loc[:, col] *= 180 / np.pi\n",
-    "\n",
-    "triplet_df[\"SSR_abs\"] = np.abs(triplet_df[\"SSR\"])"
+    "p"
    ]
   },
   {
@@ -396,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "triplet_df.sort_values(\"SSR_abs\")"
+    "p[~p[\"angle\"].isnull()].sort_values(\"n_blue\")"
    ]
   },
   {
@@ -405,9 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "triplet_df.sort_values(\"SSR_abs\").iloc[:2000][[\"deltaT\", \"SSR\", \"K\"]].hvplot.scatter(\n",
-    "    \"deltaT\", \"SSR\", color=\"K\"\n",
-    ")"
+    "p.hvplot.scatter(\"n_blue\", \"n_red\")"
    ]
   },
   {
@@ -415,12 +276,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# UPDATE GH"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
