[shenker/snakenbake] WIP cleaned up basilisk notebook.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -204,21 +204,21 @@
     "#     lanes_per_snake=3,\n",
     "#     trench_spacing=2.1,\n",
     "# )\n",
-    "workhorse = dict(\n",
-    "    feeding_channel_width=90,\n",
-    "    trench_gap=30,\n",
-    "    lanes_per_snake=5,\n",
-    "    trench_spacing=2.1,\n",
-    ")\n",
-    "workhorse_poormedia = dict(\n",
-    "    feeding_channel_width=90,\n",
-    "    trench_width=1.2,\n",
-    "    trench_gap=30,\n",
-    "    lanes_per_snake=5,\n",
-    "    trench_spacing=2.1,\n",
-    ")\n",
+    "# workhorse = dict(\n",
+    "#     feeding_channel_width=90,\n",
+    "#     trench_gap=30,\n",
+    "#     lanes_per_snake=5,\n",
+    "#     trench_spacing=2.1,\n",
+    "# )\n",
+    "# workhorse_poormedia = dict(\n",
+    "#     feeding_channel_width=90,\n",
+    "#     trench_width=1.2,\n",
+    "#     trench_gap=30,\n",
+    "#     lanes_per_snake=5,\n",
+    "#     trench_spacing=2.1,\n",
+    "# )\n",
     "\n",
-    "params = [dense_chip, workhorse, workhorse, workhorse, workhorse_poormedia, dense_chip]\n",
+    "params = [dense_chip]*4 #[dense_chip, workhorse, workhorse, workhorse, workhorse_poormedia, dense_chip]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
     "# chip names\n",
     "chip_names = [\n",
@@ -261,15 +261,15 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 210307\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 220629\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
-    "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
+    "    diameter=(3 * u.inch).to(u.um).magnitude,\n",
     "    alignment_mark_position=40e3,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/210307basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/220629basilisk.gds\")"
    ]
   },
   {
@@ -318,6 +318,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Q_per_snake = 20 * u.uL / u.min\n",
+    "height = 40 * u.um\n",
+    "mu = 0.7 * u.cP  # dynamic viscosity\n",
+    "nu = mu / (1 * u.g / u.cm**3)  # kinematic viscosity\n",
+    "print_flow_info(height, Q_per_snake, mu, nu, metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "grid_df.loc[pd.IndexSlice[:, [\"iris 40x\", \"bsi 40x\"]], :].round(2)"
    ]
   },
@@ -329,204 +342,6 @@
    "source": [
     "grid_df.loc[pd.IndexSlice[:, [\"iris 20x\", \"bsi 20x\"]], :].round(2)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old chip calculations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    Q_per_snake\n",
-    "    * mu\n",
-    "    * fluid.snake_resistance(\n",
-    "        80 * u.um,\n",
-    "        {\"snake_length\": [17920 * 19], \"feeding_channel_width\": 90},\n",
-    "        length_unit=u.um,\n",
-    "    )\n",
-    ").to(u.bar)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    Q_per_snake\n",
-    "    * mu\n",
-    "    * fluid.snake_resistance(\n",
-    "        80 * u.um,\n",
-    "        {\"snake_length\": [17920 * 25], \"feeding_channel_width\": 45},\n",
-    "        length_unit=u.um,\n",
-    "    )\n",
-    ").to(u.bar)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# FOV calculation redux"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md = metadata[\"Basilisk S1 LS5 FC90 L35 W1.4 TS5.1 TG30\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = fov.get_fov_coverage(fov_dims[\"bsi 40x\"], **md, skip_first=False)\n",
-    "b = fov.get_fov_coverage(fov_dims[\"bsi 40x\"], **md, skip_first=True)\n",
-    "(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fovh = fov_dims[\"bsi 40x\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k, v in md.items():\n",
-    "    locals()[k] = v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delta_y1 = trench_gap + trench_length\n",
-    "delta_y2 = feeding_channel_width + trench_length\n",
-    "delta_y = delta_y1 + delta_y2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(delta_y1, delta_y2, delta_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array((delta_y1, delta_y2, delta_y)) * 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "divmod(fovh - trench_length, delta_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unit_cell = trench_gap / 2 + trench_length + feeding_channel_width / 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unit_cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_unit_cells, remainder = divmod(fovh, unit_cell)\n",
-    "(num_unit_cells, remainder, num_unit_cells * unit_cell)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "partial_delta_y1 = trench_length + trench_gap / 2\n",
-    "partial_delta_y2 = trench_length + feeding_channel_width / 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(partial_delta_y1, partial_delta_y2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if num_unit_cells % 2 == 0:\n",
-    "    print(divmod(remainder, partial_delta_y1), divmod(remainder, partial_delta_y2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(divmod(remainder, partial_delta_y1), divmod(remainder, partial_delta_y2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
